--- a/app/src/main/res/layout/activity_item_menu_description.xml
+++ b/app/src/main/res/layout/activity_item_menu_description.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ItemMenuDescriptionActivity">
 
+    <Button
+        android:id="@+id/backButtonItemMenuDescriptonActivity"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="35dp"
+        android:theme="@style/WhiteButton"
+        android:layout_height="35dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/arrow_back_icon" />
+
     <ImageView
         android:id="@+id/iv_meal_item_description_activity"
         android:layout_width="match_parent"
