--- a/app/src/main/res/layout/activity_restaurant_info.xml
+++ b/app/src/main/res/layout/activity_restaurant_info.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/ivRestaurantInfoActivity"
         android:layout_width="match_parent"
-        android:layout_height="242dp"
+        android:layout_height="@dimen/restaurant_info_activity_restaurant_cover_image_height"
         android:scaleType="centerCrop"
         android:src="@drawable/shrimp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,16 +22,17 @@
         android:layout_height="242dp"
         android:background="@drawable/image_view_bottom_bar"
         app:layout_constraintBottom_toBottomOf="@id/ivRestaurantInfoActivity"
-        app:layout_constraintStart_toStartOf="@id/ivRestaurantInfoActivity"
         app:layout_constraintEnd_toEndOf="@id/ivRestaurantInfoActivity"
-        />
+        app:layout_constraintStart_toStartOf="@id/ivRestaurantInfoActivity" />
 
     <ImageView
         android:id="@+id/backButtonRestaurantInfoActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="9dp"
+        android:paddingStart="@dimen/restaurant_info_activity_back_button_padding_start"
+        android:paddingTop="@dimen/restaurant_info_activity_back_button_padding_top"
+        android:paddingEnd="@dimen/restaurant_info_activity_back_button_padding_end"
+        android:paddingBottom="@dimen/restaurant_info_activity_back_button_padding_bottom"
         android:src="@drawable/arrow_back_icon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -41,22 +42,23 @@
         android:id="@+id/restaurantName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="11dp"
+        android:layout_marginStart="@dimen/restaurant_info_activity_restaurant_name_margin_start"
+        android:layout_marginBottom="@dimen/restaurant_info_activity_restaurant_name_margin_bottom"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="Tony Roma's"
         android:textColor="@color/total_white"
-        android:textSize="36sp"
+        android:textSize="@dimen/restaurant_info_activity_restaurant_name_text_size"
         app:layout_constraintBottom_toBottomOf="@id/ivRestaurantInfoActivity"
-        app:layout_constraintStart_toStartOf="@id/backButtonRestaurantInfoActivity" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="Tony Roma's" />
 
     <TextView
         android:id="@+id/menuTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Pratos Principais"
-        android:textColor="#5A6978"
-        android:textSize="36sp"
+        android:text="@string/restaurant_info_activity_main_meals"
+        android:textColor="@color/restaurant_info_activity_menu_title_text_color"
+        android:textSize="@dimen/restaurant_info_activity_main_meals_text_size"
         app:layout_constraintEnd_toEndOf="@id/ivRestaurantInfoActivity"
         app:layout_constraintStart_toStartOf="@id/restaurantName"
         app:layout_constraintTop_toBottomOf="@id/ivRestaurantInfoActivity" />
