--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/splashscreen"
+        android:layout_gravity="center"
         android:scaleType="fitXY"/>
 
     <View
@@ -18,13 +19,14 @@
         android:background="@drawable/splash_screen_overlay"/>
 
     <TextView
+        android:id="@+id/splashscreen_activity_app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textColor="@color/total_white"
+        android:layout_gravity="center"
         android:text="DH Foods"
         android:textAllCaps="true"
+        android:textColor="@color/total_white"
         android:textSize="40sp"
-        android:layout_centerInParent="true"/>
+        android:textStyle="bold" />
 
-</RelativeLayout>
+</FrameLayout>
