--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:fillViewport="true" >
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -89,12 +93,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/register_activity_register_button_bottom_margin"
+        android:layout_marginTop="@dimen/button_margin_top"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:background="@color/button_color"
         android:text="@string/register_activity_register_button"
         android:textAllCaps="true"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tilRepeatPassword"
         app:layout_constraintEnd_toEndOf="@id/tilName"
         app:layout_constraintStart_toStartOf="@id/tilName" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
