--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="DH Foods"
+        android:text="@string/app_title"
         android:textAllCaps="true"
         android:textColor="@color/total_white"
         android:textSize="40sp"
