--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,20 @@
     <dimen name="shadow_margin_top">10dp</dimen>
     <dimen name="shadow_padding_start_restaurant_info_activity">26dp</dimen>
     <dimen name="shadow_padding_top_restaurant_info_activity">12dp</dimen>
+    <dimen name="arrow_back_width_back_item_menu_activity">35dp</dimen>
+    <dimen name="back_item_menu_activity_arrow_back_height">35dp</dimen>
+    <dimen name="back_item_menu_activity_image_height">242dp</dimen>
+    <dimen name="back_item_menu_activity_restaurant_name_margin_start">23dp</dimen>
+    <dimen name="back_item_menu_activity_restaurant_name_text_size">36sp</dimen>
+    <dimen name="back_item_menu_activity_restaurant_name_margin_bottom">12dp</dimen>
+    <dimen name="item_menu_activity_description_margin_top">28dp</dimen>
+    <dimen name="item_menu_activity_description_margin_end">11dp</dimen>
+    <dimen name="item_menu_activity_description_text_size">24sp</dimen>
+    <dimen name="item_menu_card_corner_radius">10dp</dimen>
+    <dimen name="item_menu_card_default_margin">10dp</dimen>
+    <dimen name="item_menu_image_height">150dp</dimen>
+    <dimen name="item_menu_padding">20dp</dimen>
+    <dimen name="item_menu_padding_end">20dp</dimen>
+    <dimen name="item_menu_text_height">60dp</dimen>
+    <dimen name="button_margin_top">120dp</dimen>
 </resources>
